data.old/leonardo/2025-10-02_19-44-15-121607/slurm_error.log
  File "<string>", line 1
  File "<string>", line 1
  File "<string>", line 1
srun: error: lrdn3364: task 2: Exited with exit code 1
  File "<string>", line 1
    import os, sys; print(f'Hello from Python on node {os.uname().nodename}, job step {os.environ.get(\'SLURM_STEP_ID\')}'); sys.stdout.flush()
                                                                                                                          ^
SyntaxError: f-string expression part cannot include a backslash
srun: error: lrdn3363: task 1: Exited with exit code 1
srun: error: lrdn3365: task 3: Exited with exit code 1
    import os, sys; print(f'Hello from Python on node {os.uname().nodename}, job step {os.environ.get(\'SLURM_STEP_ID\')}'); sys.stdout.flush()
    import os, sys; print(f'Hello from Python on node {os.uname().nodename}, job step {os.environ.get(\'SLURM_STEP_ID\')}'); sys.stdout.flush()
                                                                                                                          ^
                                                                                                                          ^
SyntaxError: f-string expression part cannot include a backslash
SyntaxError: f-string expression part cannot include a backslash
srun: error: lrdn3361: task 0: Exited with exit code 1
    import os, sys; print(f'Hello from Python on node {os.uname().nodename}, job step {os.environ.get(\'SLURM_STEP_ID\')}'); sys.stdout.flush()
                                                                                                                          ^
SyntaxError: f-string expression part cannot include a backslash
